Finish zvdd collection transformation
- allow URIs instead of only URL
- subject URI taken from 992
- subject URI need not to be the first parsed line
- add textile describing missing collections